--- a/packages/clay-css/src/scss/variables/_alerts.scss
+++ b/packages/clay-css/src/scss/variables/_alerts.scss
@@ -243,7 +243,7 @@ $alert-notification-sm-down: map-merge(
 	$alert-notification-sm-down
 );
 
-// Alert Autofit Row
+// .autofit-row.alert-autofit-row
 
 $alert-autofit-row: () !default;
 $alert-autofit-row: map-deep-merge(
@@ -339,6 +339,8 @@ $alert-autofit-stacked: map-deep-merge(
 			margin-bottom: 0,
 			margin-top: 0,
 			min-height: 0,
+			padding-bottom: 0,
+			padding-top: 0,
 			autofit-col: (
 				width: 100%,
 			),
